<resources>

    <string name="app_name">Network Traffic Monitor</string>
    <string name="preferences_key">preferences_key</string>
    <string name="restart_key">restart</string>
    <string name="MDR_key">mobileReminder</string>
    <string name="title_text">Live Traffic Monitor</string>
    <string name="settings_title">Notifications Settings</string>
    <string name="instruction_text_2">\u2022 You don\'t even have to keep this app running after you have started the monitor.</string>
    <string name="instruction_text_1"> \u2022 Press the start button to begin seeing your network traffic in real time.</string>
    <string name="info_title">Usage Information</string>
    <string name="instruction_text_3">\u2022 Restart the service to see settings changes.</string>
    <string name="title_activity_application_traffic_monitor">ApplicationTrafficMonitor</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="app_monitor_help" >All data is valid from last system reboot. Data is reset when the device is restarted.</string>

    <string-array name="time_units">
        <item>Select</item>
        <item>1 min</item>
        <item>5 min</item>
        <item>10 min</item>
        <item>30 min</item>
        <item>60 min</item>
    </string-array>
</resources>

