<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeActivity">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    >
    <TextView
        android:id="@+id/tvDesciption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        style="@style/material_standard_textview"
        android:layout_marginBottom="8dp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tvSettingsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_title"
            style="@style/material_secondary_textview"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"/>

        <CheckBox
            android:id="@+id/cbDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Download Speed"
            android:checked="true"

            />

        <CheckBox
            android:id="@+id/cbUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Upload Speed"
            android:checked="true"
            />
        <CheckBox
            android:id="@+id/cbRestart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Auto-Start on device restart"
            android:checked="true"
            />
        <CheckBox
            android:id="@+id/cbLockScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show in lock screen"
            android:checked="false"
            />

        <CheckBox
            android:id="@+id/cbTray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show speed in system tray"
            android:checked="false"
            />


        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/rgTray"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            >
            <RadioButton android:id="@+id/rbDownload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Download"
                />
            <RadioButton android:id="@+id/rbUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Upload"
                />

        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Start"
            android:background="@drawable/rounded_button"
            android:layout_marginRight="8dp"
            android:textColor="@android:color/white"

            />

    </LinearLayout>

    <TextView
        android:layout_marginTop="16dp"
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_title"
        style="@style/material_secondary_textview"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"/>

    <TextView
        android:layout_marginTop="16dp"
        android:id="@+id/tvInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_text_1"
        style="@style/material_standard_textview"
        />

    <TextView
        android:layout_marginTop="16dp"
        android:id="@+id/tvHint1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_text_2"
        style="@style/material_standard_textview"
        />

    <TextView
        android:layout_marginTop="16dp"
        android:id="@+id/tvHint2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_text_3"
        style="@style/material_standard_textview"
        />
</LinearLayout>
</ScrollView>